--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,11 +1,6 @@
-<section class="hero is-light is-small  is-bold">
-  <div class="hero-body">
+<section class="section">
     <div class="container">
-
-      <h1 class="title">Posts!</h1>
-      <a class="button is-success">Add Post</a>
+        <a class="button is-success" routerLink="add-post">Add Post</a>
     </div>
-  </div>
 </section>
-
 <app-posts-lists></app-posts-lists>
