Implement CRUD for Categories and login module

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -9,6 +9,7 @@
     <div class="navbar-start">
       <a class="navbar-item" routerLink="">Posts</a>
       <a class="navbar-item" routerLink="category">Categories</a>
+      <a class="navbar-item" routerLink="user">Users</a>
     </div>
   </div>
 </nav>
