--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 <section class="section">
     <div class="container">
-        <a class="button is-success" routerLink="add-post">Add Post</a>
+        <a class="button is-success" [routerLink]="['/add-post']">Add Post</a>
     </div>
 </section>
 <app-posts-lists></app-posts-lists>
