--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,15 +1,28 @@
-<nav class="navbar is-link">
-  <!-- logo -->
-  <div class="navbar-brand">
-    <a class="navbar-item">
-      <img src="https://www.laureate.net/~/media/Images/LGG/Logos/footer_liu_190.ashx">
-    </a>
-  </div>
-  <div class="navbar-menu">
-    <div class="navbar-start">
-      <a class="navbar-item" routerLink="">Posts</a>
-      <a class="navbar-item" routerLink="category">Categories</a>
-      <a class="navbar-item" routerLink="user">Users</a>
+<nav class="navbar is-white">
+  <div class="container">
+    <div class="navbar-brand">
+      <a class="navbar-item brand-text" href="../">
+        Laureate
+      </a>
+      <div class="navbar-burger burger" data-target="navMenu">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+    </div>
+    <div id="navMenu" class="navbar-menu">
+      <div class="navbar-start">
+        <a class="navbar-item" routerLink="">
+          Posts
+        </a>
+        <a class="navbar-item" routerLink="category">
+          Categories
+        </a>
+        <a class="navbar-item"routerLink="users">
+          Users
+        </a>
+      </div>
+
     </div>
   </div>
 </nav>
