--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,12 @@
 <!-- header -->
-<app-header></app-header>
-<section class="hero is-light is-small  is-bold">
+<!-- <app-header></app-header> -->
+<!-- <section class="hero is-light is-small  is-bold">
     <div class="hero-body">
         <div class="container">
             <h1 class="title">{{title}}</h1>
         </div>
     </div>
-</section>
-
-
+</section> -->
 <!-- routes will be rendered here -->
 <router-outlet (titleEvent)="titleEventHandler($event)"></router-outlet>
 
