--- a/src/app/components/category/add-category/add-category.component.html
+++ b/src/app/components/category/add-category/add-category.component.html
@@ -1,18 +1,23 @@
 <section class="section">
   <div class="container">
-    <h1 class="title">Add a new Category</h1>
-    <form [formGroup]="addForm" (ngSubmit)="onSubmit()">
-      <div class="field">
-        <label class="label">Name</label>
-        <div class="control has-icons-left has-icons-right">
-          <input class="input" type="text" placeholder="Text input" formControlName="name"
-            [ngClass]="{ 'is-danger': submitted && f.name.errors }">
+      <div class="columns">
+        <div class="column is-6 is-offset-3">
+            <h2 class="title">Add a new Category</h2>
+            <form [formGroup]="addForm" (ngSubmit)="onSubmit()">
+              <div class="field">
+                <label class="label">Name</label>
+                <div class="control has-icons-left has-icons-right">
+                  <input class="input" type="text" placeholder="Text input" formControlName="name"
+                    [ngClass]="{ 'is-danger': submitted && f.name.errors }">
+                </div>
+                <p class="help is-danger" *ngIf="submitted && f.name.errors">Name is required</p>
+              </div>
+              <div class="buttons">
+                <button type="submit" class="button is-info">Submit</button>
+                <button type="button" class="button" (click)="cancel()">Cancel</button>
+              </div>
+            </form>
         </div>
-        <p class="help is-danger" *ngIf="submitted && f.name.errors">Name is required</p>
-      </div>
-      <div class="container">
-        <button type="submit" class="button is-info">Submit</button>
-      </div>
-    </form>
+    </div>
   </div>
 </section>
