--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar is-white">
   <div class="container">
     <div class="navbar-brand">
-      <a class="navbar-item brand-text" href="../">
+      <a class="navbar-item brand-text">
         Laureate
       </a>
       <div class="navbar-burger burger" data-target="navMenu">
@@ -12,17 +12,21 @@
     </div>
     <div id="navMenu" class="navbar-menu">
       <div class="navbar-start">
-        <a class="navbar-item" routerLink="">
+        <a class="navbar-item" routerLink="" *ngIf="checkPermission('getpost')">
           Posts
         </a>
-        <a class="navbar-item" routerLink="category">
+        <a class="navbar-item" routerLink="/category" *ngIf="checkPermission('getcategory')">
           Categories
         </a>
-        <a class="navbar-item"routerLink="users">
+        <a class="navbar-item"routerLink="/user" *ngIf="checkPermission('getuser')">
           Users
         </a>
       </div>
-
+      <div class="navbar-end">
+        <a class="navbar-item" (click)="logout()">
+          Logout
+        </a>
+      </div>
     </div>
   </div>
 </nav>
