Remove unnecesary code

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
     </div>
 </section> -->
 <!-- routes will be rendered here -->
-<router-outlet (titleEvent)="titleEventHandler($event)"></router-outlet>
+<router-outlet></router-outlet>
 
 <!-- footer -->
 <app-footer></app-footer>
