--- a/src/app/components/users/user-list/user-list.component.html
+++ b/src/app/components/users/user-list/user-list.component.html
@@ -17,7 +17,7 @@
               <td>{{ user.name }}</td>
               <td>{{user.role.role}}</td>
               <td>
-                <a class="button is-primary is-outlined" (click)="editUser(user.id)">Edit</a>
+                <a class="button is-primary is-outlined" *ngIf="user.name !== 'Admin'" (click)="editUser(user.id)">Edit</a>
                 <a class="button is-danger is-outlined" *ngIf="user.name !== 'Admin'" (click)="deleteUser(user.id)">Delete</a>
               </td>
             </tr>
