Add validation for users

--- a/src/app/components/users/edit-user/edit-user.component.html
+++ b/src/app/components/users/edit-user/edit-user.component.html
@@ -32,6 +32,9 @@
             </div>
             <p class="help is-danger" *ngIf="submitted && f.role.errors">Select at least one category</p>
           </div>
+          <div class="field">
+            <p class="help is-danger" *ngIf="error">{{error}}</p>
+          </div>
           <div class="buttons">
             <button type="submit" class="button is-info">Submit</button>
             <button type="button" class="button" (click)="cancel()">Cancel</button>
